--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
----
+env:
+  global:
+    - CC_TEST_REPORTER=eb717534daf85909a03c990170e4dbd849d1eef16cc9cc804cfa912b284df872
 sudo: false
 language: ruby
 cache: bundler
 rvm:
   - 2.6.1
 before_install: gem install bundler -v 1.17.2
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - bundle exec rspec
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
